Fix contact section alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,7 @@
-body {
-  background: #fff;
-  color: #000;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 input, textarea {
-  width: 100%;
-  max-width: 360px;
-  margin: 1px auto;
-  display: block;
   border: 2px #000 solid;
-  border-radius: 0px;
-  padding: 12px 0px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
+  padding: 12px;
+  font-size: 16px;
 }
 
 a {
@@ -22,6 +10,6 @@ a {
 }
 
 .card {
-  border: 2px black solid;
+  border: 2px #000 solid;
   padding: 20px;
 }
